# Quasar

./: Dockerfile  README.md  default_accelerate_config.yaml  docker-compose.yml  finetune.py  inference.py  my_task.yaml  pyproject.toml  requirements.txt  simple.py  train.py
Docs/: docker.md
quasar/: __init__.py  finetune.py  inference.py  simple.py  train.py
