[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quasarx"
version = "0.0.2"
description = "quasar - Pytorch"
license = "MIT"
authors = ["Kye Gomez <kye@apac.ai>"]
homepage = "https://github.com/kyegomez/quasar"
documentation = ""  # Add this if you have documentation.
readme = "README.md"  # Assuming you have a README.md
repository = "https://github.com/kyegomez/quasar"
keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6"
]
packages = [
    { include = "quasar" },
    { include = "quasar/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.6"
accelerate = "*"
datasets = "*"
evaluate = "*"
torch = "*"
transformers = "*"
tqdm = "*"
einops = "*"
sentencepiece = "*"
protobuf = "*"
scikit-learn = "*"
matplotlib = "*"
pandas = "*"
numpy = "*"
wandb = "*"
deepspeed = "*"
peft = "*"
bitsandbytes = "*"
trl = "*"


[tool.poetry.dev-dependencies]
# Add development dependencies here
